tests/fails/cast.t


terra foo()
	var b = 3
	var a = [double] b
end

foo:compile()